# brandguard-compliance-suite

./: .dockerignore  .env.example  .gitignore  .replit  BrandGuard_Backend_Pipeline_Detail.md  Dockerfile  package.json  proxy3000.js  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Azure-Blob-Storage-why-do-we-need-it-When-a-user-uploa_1774709088782.txt  Pasted-Analyzed-deployment-specs-and-formulated-practical-conf_1774728125359.txt  Pasted-Each-image-gets-its-own-complete-independent-analysis-T_1774708298934.txt  Pasted-OK-Abdullah-this-is-a-solid-interview-challenge-Deadlin_1774706634547.txt  Pasted-Yes-I-understand-exactly-Right-now-the-system-says-here_1774793488652.txt  Pasted-Your-Vision-resource-is-set-up-correctly-Region-eastus-_1774725265142.txt
backend/: config.py  database.py  debug_raw_responses.json  logging_config.py  main.py  redis_client.py  requirements.txt
backend/data/: rules.json
backend/models/: schemas.py
backend/routers/: batch.py  chat.py  compliance.py  history.py  rules.py
backend/services/: blob_service.py  compliance_engine.py  dns_helper.py  job_manager.py  llm_service.py  vision_service.py
deploy/: nginx.conf  supervisord.conf
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: AuroraBackground.tsx  BoundingBoxOverlay.tsx  ClientShell.tsx  ErrorBoundary.tsx  ExtErrorFilter.tsx  Sidebar.tsx  Skeletons.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  cache.ts  pdf-generator.ts  rule-names.ts  types.ts
(+11 files in other folders)
